@@ -2,22 +2,19 @@ Opera7 is powerful if you use the either web for work or for entertainment.
 Features:
 * Supports HTML 3.2, 4.0, 4.01; XHTML 1.0; WML 1.3 & 2.0; XML; CSS 1.0, 2.0,
   2.1, 3.0; EcmaScript ECMA-262 2ed, 3ed (JavaScript 1.3/1.5 Core); DOM 1, 2
-* Browses FTP Sites
+* BiDi support, Small Screen Rendering (TM) 
+* Browses FTP Sites, support for browsing local files
+* Proxy server support
+* File transfer, File upload support
 * Built-in M2 mail client
 * Handles cookies
-* Displays GIF, PNG and JPEG
 * Hot list, bookmarks and bookmark bar
 * Unique mouse gestures for easier browsing
 * Pop-up defense features
 * Imports Netscape, Konqueror and IE bookmarks/favorites
-* Proxy server support
 * Communication through SSL and TLS
 * HTTP Authorization
 * Asynchronous DNS with threading
-* Support for browsing local files
-* File transfer
-* File upload support
-* Restore window settings
 * Customizable toolbar icons
 * Keyboard link navigation
 * Printing (PostScript)
